[package]
name = "ssb-crypto"
version = "0.2.0"
authors = ["sean billig <sean.billig@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "Crypto primitives used by Secure Scuttlebutt"
repository = "https://github.com/sunrise-choir/ssb-crypto"
documentation = "https://docs.rs/ssb-crypto/"
readme = "README.md"
keywords = ["ssb", "scuttlebutt", "crypto"]

[dependencies]
zerocopy = "0.3.0"
zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
libsodium-sys = { version = "0.2.5", optional = true }
sodiumoxide   = { version = "0.2.5", optional = true }
base64 = { version = "0.12.3", optional = true, default_features = false }
ed25519-dalek = { version = "1.0.0-pre.3", optional = true, features = ["legacy_compatibility"] }
x25519-dalek = { version = "0.6.0", optional = true }
curve25519-dalek = { version = "2.1.0", optional = true }
xsalsa20poly1305 = { version = "0.4.2", optional = true }
rand = { version = "0.7.3", optional = true, default_features = false, features = ["getrandom"] }
sha2 = { version = "0.9.1", optional = true }
hmac = { version = "0.8.1", optional = true }
subtle = "2.2.3"

[features]
default = ["dalek", "b64"]
dalek = ["dalek_module"]
dalek_module = ["ed25519-dalek", "x25519-dalek", "curve25519-dalek", "xsalsa20poly1305", "rand", "sha2", "hmac"]
force_sodium = ["sodium"]
sodium = ["sodium_module"]
sodium_module = ["sodiumoxide", "libsodium-sys"]
b64 = ["base64"]

[dev-dependencies]
hex = "0.4.2"
